--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/index.xhtml
@@ -17,10 +17,11 @@
 			<com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" />
 
 			<com:stylefile path="cps001.a.style.css" />
-			<com:scriptfile path="/view/cps/007/a/layout-control-ko-ext.js"
-				of="/nts.uk.com.web" />
-				
-			<com:scriptfile path="cbx-control-ko-ext.js" />
+			
+			<com:scriptfile path="/view/cps/shr/cbx-control-ko-ext.js" />
+			<com:scriptfile path="/view/cps/shr/layout-control-ko-ext.js" />
+			<com:scriptfile path="/view/cps/shr/layout-control-validation.js" />
+			
 			<com:scriptfile path="cps001.a.service.js" />
 			<com:scriptfile path="cps001.a.vm.js" />
 			<com:scriptfile path="cps001.a.start.js" />
