fix remove double siblings in all layout

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/007/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/007/a/index.xhtml
@@ -10,6 +10,7 @@
 			<com:scriptfile set="IGNITE" />
 
 			<com:stylefile path="cps007.a.style.css" />
+			<com:scriptfile path="/view/cps/shr/layout-control-validation.js" />
 			<com:scriptfile path="/view/cps/shr/layout-control-ko-ext.js" />
 			<com:scriptfile path="cps007.a.service.js" />
 			<com:scriptfile path="cps007.a.vm.js" />
