--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/008/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/008/a/index.xhtml
@@ -12,6 +12,7 @@
 					nts.uk.ctx.pereg.dom.person.layout.LayoutName
 			</com:ValidatorScript>
 			<com:scriptfile set="IGNITE" />
+			<com:scriptfile path="/view/cps/shr/layout-control-validation.js" />
 			<com:scriptfile path="/view/cps/shr/layout-control-ko-ext.js" />
 			<com:stylefile path="cps008.a.style.css" />
 			<com:scriptfile path="cps008.a.service.js" />
