--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/008/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/008/b/index.xhtml
@@ -15,7 +15,8 @@
 			</script>
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="cps008.b.style.css" />
-			<com:scriptfile path="../../007/a/layout-control-ko-ext.js" />
+			<com:scriptfile path="/view/cps/shr/layout-control-validation.js" />
+			<com:scriptfile path="/view/cps/shr/layout-control-ko-ext.js" />
 			<com:scriptfile path="cps008.b.service.js" />
 			<com:scriptfile path="cps008.b.vm.js" />
 			<com:scriptfile path="cps008.b.start.js" />
