--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/index.xhtml
@@ -48,6 +48,7 @@
 			<com:scriptfile path="../commonTableMonthDaySet.js" />
 			
 			<com:stylefile path="kmf002.a.main.css" />
+			<com:scriptfile path="kmf002.a.service.js" />
 			<com:scriptfile path="kmf002.a.vm.js" />
 			<com:scriptfile path="kmf002.a.start.js" />
 			
