--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/b/index.xhtml
@@ -71,7 +71,7 @@
                          || checkItem() == 4
                          || checkItem() == 5
                          || checkItem() == 6">
-                     <div id='div_target_service_type_ba1'>
+                     <div id='div_target_service_type_ba1' >
                         <table >
                             <colgroup>
                                 <col width="150px" />
@@ -108,7 +108,7 @@
 	                                        options: $parent.itemListTargetSelectionRange_BA1_5,
 	                                        optionsValue: 'value',
 	                                        optionsText: 'localizedName',
-	                                        value: errorAlarmCondition().targetWorkTimeConditionn().comparePlanAndActual,
+	                                        value: errorAlarmCondition().workTimeCondition().comparePlanAndActual,
 	                                        enable: true}">
 	                                     </div>
 	                                 </com:ko-if>
@@ -122,7 +122,8 @@
                                         || checkItem() == 3
                                         || checkItem() == 4
                                         || checkItem() == 6">
-                                            <button id="btnSettingBA1_3"  data-bind="click : function() {$parent.btnSettingBA1_3_click()}, enable: workTypeCondition() > 0">#{i18n.getText('KAL003_57')}</button>
+                                            <button id="btnSettingBA1_3"  data-bind="click : function() {$parent.btnSettingBA1_3_click()},
+                                            	 enable: errorAlarmCondition().workTypeCondition().comparePlanAndActual() > 0">#{i18n.getText('KAL003_57')}</button>
                                             <!-- BA1-4 -->
                                             <input data-bind="ntsTextEditor: {
                                               value: $parent.displayWorkTypeSelections_BA1_4,
@@ -181,7 +182,7 @@
 	                                                options: $parent.listCompareTypes,
 	                                                optionsValue: 'value',
 	                                                visibleItemsCount: 5,
-	                                                value: errorAlarmCondition().attendanceItemCondition().comparisonOperator,
+	                                                value: errorAlarmCondition().atdItemCondition().group1().conditionOperator,
 	                                                optionsText: 'localizedName',
 	                                                editable: false,
 	                                                enable: true,
@@ -287,7 +288,7 @@
 	                                        options: $parent.itemListTargetSelectionRange_BA1_5,
 	                                        optionsValue: 'value',
 	                                        optionsText: 'localizedName',
-	                                        value: errorAlarmCondition().attendanceItemCondition().comparePlanAndActual,
+	                                        value: errorAlarmCondition().workTimeCondition().comparePlanAndActual,
 	                                        enable: true}">
 	                                     </div>
 	                            </td>
@@ -297,7 +298,7 @@
 	                                    <button id="btnSettingBA5_3" data-bind="click : function() {$parent.btnSettingBA5_2_click()}, enable: true">#{i18n.getText('KAL003_57')}</button>
 	                                    <!-- BA1-3 -->
 	                                    <input data-bind="ntsTextEditor: {
-	                                       value: $parent.displayTargetWorkingTimeSelections_BA5_3,
+	                                       value: $parent.displayWorkingTimeSelections_BA5_3,
 	                                       readonly: true}" />
 	                                </div>
 	                            </td>
@@ -309,7 +310,7 @@
                     <com:ko-if bind="checkItem() == 4
                         || checkItem() == 5
                         || checkItem() == 6">
-	                    <div id="div_continuous_period_ba3">
+	                    <div id="div_continuous_period_ba3" data-bind="with: errorAlarmCondition">
 	                        <table >
 	                        <colgroup>
 	                            <col width="150px" />
@@ -327,7 +328,7 @@
 		                                <!-- BA3-2--> <!-- TODO constrain Continuous period CheckedTimesValue -->
 		                                <input class="value-input needcheck" data-bind="ntsNumberEditor: {
 		                                       name: '#[KAL003_61]',
-		                                       value: errorAlarmCondition().continuousPeriod,
+		                                       value: continuousPeriod,
 		                                       required: true,
 		                                       constraint: 'CheckedTimesValue',
 		                                       enable: true,
