--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/005/cm/index.xhtml
@@ -1,7 +1,8 @@
 <div>
 	<div  data-bind="if: indicationOvertimeFlg" >
 		<div class="cf valign-center control-group"
-			style = "margin-left: -2px; background: #f8efd4; padding: 15px 10px 15px 12px; width: 778px;">
+			data-bind="style: {padding: screenModeNew()== true ? '0px 10px 15px 12px' : '15px 10px 15px 12px'}"
+			style = "margin-left: -2px; background: #f8efd4;width: 778px;">
 			<!--A2_7 時間外労働ラベル--> 			
 			<div class="pull-left">#{i18n.getText('KAF005_23')}</div>
 			<div class="pull-left">
