Update KAL004 tab2

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/b/index.xhtml
@@ -25,7 +25,7 @@
 
 			<div id="contents-area">
 				<div class="header">
-					<span class="label">Add QA</span>
+					<span class="label" data-bind="text: getCategoryName"></span>
 				</div>
 				<div class="cf">
 					<div class="valign-center control-group start">
