Fix Kdw 002 remove button copy

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/002/c/kdw002.c.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/002/c/kdw002.c.main.css
@@ -93,10 +93,11 @@ td:nth-child(3), td:nth-child(4), td:nth-child(5) {
 .leftLabel {
 	
 }
-
+/*
 .copy {
 	margin-left: 540px !important;
 }
+*/
 table#grid tbody td:nth-child(1) {
     text-align: right;
 }
