--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/002/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/002/c/index.xhtml
@@ -25,7 +25,7 @@
 					</div>
 				</div>
 				<button tabindex="2" class="proceed" data-bind="click: submitData">#{i18n.getText('KDW002_2')}</button>
-				<button tabindex="3" class="copy"  data-bind="click: copy">#{i18n.getText('KDW002_14')}</button>
+				<!--  <button tabindex="3" class="copy"  data-bind="click: copy">#{i18n.getText('KDW002_14')}</button>  -->
 				<!--  <label class="mylabel">#{i18n.getText('KDW002_1')}</label> -->
 			</div>
 			<div id="contents-area">
