kal003a tab checkcondition: update UI

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
@@ -62,13 +62,14 @@
 	                       <button data-bind="click: function() {$parent.btnSettingCheckCondition_click(rowId)},enable: true">#{i18n.getText('KAL003_14')}</button>
 	                   </td>
 	                   <td>
-	                       <input data-bind="ntsTextEditor: {value: errorAlarmCondition().message,
-	                           option: ko.mapping.fromJS(new nts.uk.ui.option.TextEditorOption({
-	                            textmode: 'text',
-	                            placeholder: '',
-	                            width: '203px',
-	                            textalign: 'left'
-	                        }))}" />
+<!-- 	                       <input data-bind="ntsTextEditor: {value: errorAlarmCondition().message, -->
+<!-- 	                           option: ko.mapping.fromJS(new nts.uk.ui.option.TextEditorOption({ -->
+<!-- 	                            textmode: 'text', -->
+<!-- 	                            placeholder: '', -->
+<!-- 	                            width: '203px', -->
+<!-- 	                            textalign: 'left' -->
+<!-- 	                        }))}" /> -->
+	                        <span data-bind="text: 'WorkRecordExtractCondition.message'"></span>
 	                   </td>
 		           </tr>
 		       </tbody>
