--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/f/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/f/index.xhtml
@@ -90,11 +90,11 @@
 			</div>
 			<div id="functions-area-bottom">
 				<com:ko tag="if" bind="isFinish()">
-					<button tabindex="2" class="large"
+					<button id="btn-f-close" tabindex="2" class="large"
 						data-bind="click: cancelSaveCommonGuidelineSetting">#{i18n.getText('KSC001_61')}</button>
 				</com:ko>
 				<com:ko tag="if" bind="!isFinish()">
-					<button tabindex="2" class="large"
+					<button id="btn-f-stop" tabindex="2" class="large"
 						data-bind="click: stopExecution">#{i18n.getText('KSC001_60')}</button>
 				</com:ko>
 			</div>
