--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/b/index.xhtml
@@ -221,6 +221,7 @@
 			                                        name: '#[KAL003_64]', 
 			                                        constraint:'TimeWithDayAttr', 
 			                                        value: $parent.comparisonRange().minTimeWithinDayValue, 
+			                                        enable: true,
 			                                        required: true }" />
 	                                    </com:ko-if>
 	                                    
