--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/f/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/f/index.xhtml
@@ -21,7 +21,7 @@
 			<com:scriptfile path="ksc001.f.vm.js" />
 		</ui:define>
 		<ui:define name="content">
-			<div id="contents-area" >
+			<div id="contents-area" style="display: none" data-bind="visible: true" >
 				<div class="contentSchedule" tabindex="-1">
 					<label tabindex="-1" class="labelFirstBold">#{i18n.getText('KSC001_48')}</label>
 					
@@ -78,6 +78,7 @@
 								primaryKey: 'noID',
 								columns: columns,
 								multiple: false,
+								enable: false,
 								value: currentCode,
 								rows: 10
 							}"></table>
