fixbug require textbox khi checkbox on CMM021

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/b.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/b.xhtml
@@ -49,7 +49,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B1_6 -->
-				<td class="padding-scr-b padding-botom-scr-b" ><input id="" tabindex="9"
+				<td class="padding-scr-b padding-botom-scr-b" ><input id="userName1" tabindex="9"
 					data-bind="ntsTextEditor: {
 									value: userName1,
 									name: '#[CMM021_22]',
@@ -82,7 +82,7 @@
 					<div>#{i18n.getText('CMM021_35')}</div>
 				</td>
 				<!-- B2_4 -->
-				<td class="padding-scr-b"><input id="" tabindex="10"
+				<td class="padding-scr-b"><input id="hostName2" tabindex="10"
 					data-bind="ntsTextEditor: {
 									value: hostName2,
 									name: '#[CMM021_24]',
@@ -102,7 +102,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B2_6 -->
-				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="11"
+				<td class="padding-scr-b padding-botom-scr-b"><input id="userName2" tabindex="11"
 					data-bind="ntsTextEditor: {
 									value: userName2,
 									name: '#[CMM021_25]',
@@ -134,7 +134,7 @@
 					<div>#{i18n.getText('CMM021_35')}</div>
 				</td>
 				<!-- B3_4 -->
-				<td class="padding-scr-b"><input id="" tabindex="12"
+				<td class="padding-scr-b"><input id="hostName3" tabindex="12"
 					data-bind="ntsTextEditor: {
 									value: hostName3,
 									name: '#[CMM021_27]',
@@ -154,7 +154,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B3_6 -->
-				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="13"
+				<td class="padding-scr-b padding-botom-scr-b"><input id="userName3" tabindex="13"
 					data-bind="ntsTextEditor: {
 									value: userName3,
 									name: '#[CMM021_28]',
@@ -186,7 +186,7 @@
 					<div>#{i18n.getText('CMM021_35')}</div>
 				</td>
 				<!-- B4_4 -->
-				<td class="padding-scr-b"><input id="" tabindex="14"
+				<td class="padding-scr-b"><input id="hostName4" tabindex="14"
 					data-bind="ntsTextEditor: {
 									value: hostName4,
 									name: '#[CMM021_30]',
@@ -206,7 +206,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B4_6 -->
-				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="15"
+				<td class="padding-scr-b padding-botom-scr-b"><input id="userName4" tabindex="15"
 					data-bind="ntsTextEditor: {
 									value: userName4,
 									name: '#[CMM021_31]',
@@ -238,7 +238,7 @@
 					<div>#{i18n.getText('CMM021_35')}</div>
 				</td>
 				<!-- B5_4 -->
-				<td class="padding-scr-b"><input id="" tabindex="16"
+				<td class="padding-scr-b"><input id="hostName5" tabindex="16"
 					data-bind="ntsTextEditor: {
 									value: hostName5,
 									name: '#[CMM021_33]',
@@ -258,7 +258,7 @@
 					<div>#{i18n.getText('CMM021_36')}</div>
 				</td>
 				<!-- B5_6 -->
-				<td class="padding-scr-b padding-botom-scr-b"><input id="" tabindex="17"
+				<td class="padding-scr-b padding-botom-scr-b"><input id="userName5" tabindex="17"
 					data-bind="ntsTextEditor: {
 									value: userName5,
 									name: '#[CMM021_34]',
