--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/c.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/c.xhtml
@@ -44,7 +44,7 @@
 					<div>#{i18n.getText('CMM021_39')}</div>
 				</td>
 				<!-- C1_6 -->
-				<td class="padding-scr-c"><input id="" tabindex="9"
+				<td class="padding-scr-c"><input id="userName6" tabindex="9"
 					data-bind="ntsTextEditor: {
 									value: userName6,
 									name: '#[CMM021_39]',
