update UI Kal 004

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/setpermission/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/004/a/setpermission/index.xhtml
@@ -18,7 +18,7 @@
 		<div class="valign-center control-group" style="margin-top: 40px;">
 			<label>#{i18n.getText('KAL004_114')}</label> <input
 				style="margin-left: 59px;"
-				data-bind="ntsTextEditor: {value : executionAuthor}" />
+				data-bind="ntsTextEditor: {value : executionAuthor , readonly : true}" />
 			<button data-bind="click : openCDL025">#{i18n.getText('KAL004_115')}</button>
 		</div>
 	</ui:composition>
