--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/daily/dailyperformance/dailyperfor.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/daily/dailyperformance/dailyperfor.xhtml
@@ -4,34 +4,20 @@
     xmlns:com="http://xmlns.jcp.org/jsf/component"
     xmlns:h="http://xmlns.jcp.org/jsf/html">
     
-    <com:ValidatorScript>
-        nts.uk.ctx.at.record.dom.workrecord.erroralarm.primitivevalue.NameWKRecord
-    </com:ValidatorScript>
-    
     <div>
-        <table id="table-fixed">
-            <thead>
-            <tr class="bg-green">
-                <th style="width: 55px;text-align: center;"><div data-bind="ntsCheckBox: { checked: isAllDailyPerfor}"></div></th>
-                <th style="width: 100px;">#{i18n.getText('KAL003_52')}</th>
-                <th style="width: 155px; text-align: center;">#{i18n.getText('KAL003_53')}</th>
-                <th style="width: 200px;">#{i18n.getText('KAL003_54')}</th>
-                <th style="width: 200px;">#{i18n.getText('KAL003_55')}</th>
-            </tr>
-        </thead>
-        <tbody>
-            <com:ko-foreach bind="listWorkRecordExtraCon">
-                <tr>
-                    <td style="text-align: center;">
-                        <div data-bind="ntsCheckBox: { checked: $data.useAtr }"></div>
-                    </td>
-                    <td><span data-bind="text: nameWKRecord"></span> </td>
-                    <td> <span data-bind="text: nameWKRecord"></span></td>
-                    <td> <input data-bind="text: nameWKRecord" /></td>
-                    <td> <input data-bind="text: nameWKRecord" /></td>
-                </tr>
-            </com:ko-foreach>
-        </tbody>
-        </table>
+    	<div data-bind="ntsCheckBox: { checked: addApplication, enable: true }">#{i18n.getText('KAL003_66')}</div>
+        <table id="AA3_1" data-bind="ntsGridList: {
+				height: 350,
+				options: listWorkRecordExtraCon,
+				optionsValue: 'errorAlarmCheckID',
+				columns: [
+	                { headerText: '#{i18n.getText('KAL003_52')}', key: 'code', width: 70 }, 
+	                { headerText: '#{i18n.getText('KAL003_53')}', key: 'classification', width: 50 }, 
+	                { headerText: '#{i18n.getText('KAL003_54')}', key: 'name', width: 150 },
+	                { headerText: '#{i18n.getText('KAL003_55')}', key: 'message', width: 150 } 
+	            ],
+				multiple: true,
+				value: currentCodeList
+			}"></table>
     </div>
 </ui:composition>
