--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/c/index.xhtml
@@ -15,21 +15,50 @@
 			</script>
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="cps003.c.style.css" />
-			<com:scriptfile path="cps003.c.service.js" />
-			<com:scriptfile path="cps003.c.vm.js" />
-			<com:scriptfile path="cps003.c.start.js" />
+			<!-- 			<com:scriptfile path="cps003.c.service.js" /> -->
+			<!-- 			<com:scriptfile path="cps003.c.vm.js" /> -->
+			<!-- 			<com:scriptfile path="cps003.c.start.js" /> -->
 		</ui:define>
 
 		<ui:define name="content">
-			<div id="contents-area"
-				data-bind="let: { 
-						text: nts.uk.resource.getText
-					}>
+			<div id="functions-area">
+				<button id="" class="proceed">#{i18n.getText('CPS003_45')}</button>
+				<button tabindex="" id="">#{i18n.getText('CPS003_46')}</button>
+				<button tabindex="" id="">#{i18n.getText('CPS003_47')}</button>
+				<button id="" class="danger" tabindex="">#{i18n.getText('CPS003_48')}</button>
+				<button tabindex="" id="">#{i18n.getText('CPS003_49')}</button>
 			</div>
-			<div id="functions-area-bottom">
-				<button class="proceed x-large" data-bind="">#{i18n.getText('CPS007_16')}</button>
-				<button data-bind="click: close">#{i18n.getText('CPS007_17')}</button>
+
+			<div id="contents-area">
+				<div id="left-content"
+					class="relative bg-green caret-right caret-background">
+					<i class="icon icon-searchbox"></i>
+					<div class="cf">
+						<div style="float: left"></div>
+					</div>
+				</div>
+
+				<div id="right-content">
+					<div id="right-content" class="form-group">
+						<div class="row">
+							<div class="coll">Test01</div>
+						</div>
+
+						<div class="row">
+							<div class="coll">Test02</div>
+						</div>
+						
+						<div class="row">
+							<div class="coll">Test03</div>
+						</div>
+
+						<div class="row">
+							<div class="coll">Test04</div>
+						</div>
+					</div>
+				</div>
 			</div>
+
 		</ui:define>
 	</ui:composition>
 </body>
