--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/017/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/017/a/index.xhtml
@@ -178,7 +178,7 @@
 						<div class="input">
 							<div>
 								<span data-bind="if: infoSelection().selectionCodeCharacter() == 0"> 
-								<input id="code" data-bind="ntsNumberEditor: {
+								<input id="code" data-bind="ntsTextEditor: {
 										name: '#[CPS017_21]', 
 										value: selectionCD,
 										constraint: 'SelectionCD', 
