--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/index.xhtml
@@ -9,9 +9,9 @@
 	<ui:composition>
 		<div class="sidebar-content-header">
 			<!-- C1_1 -->
-   			<button tabindex="1" data-bind="click: save, attr : {'disabled' : selectedCode() == null ? true : false}">#{i18n.getText('KMF002_2')}</button>
+   			<button tabindex="1" data-bind="click: save, enable: enableSave">#{i18n.getText('KMF002_2')}</button>
    			<!-- C1_2 -->
-   			<button tabindex="2" data-bind="click: remove, attr : {'disabled' : selectedCode() == null ? true : false}">#{i18n.getText('KMF002_11')}</button>
+   			<button tabindex="2" data-bind="click: remove, enable: enableDelete">#{i18n.getText('KMF002_11')}</button>
 		</div>
 		
 		<div id="scrC" class="contents-area">
