--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -56,8 +56,7 @@
 				</div>
 				<!-- A3_9 -->
 				<div tabindex="5" data-bind="ntsCheckBox: { checked: forwardSetOfPubHD().isTransferWhenPublicHdIsMinus, 
-														enable: enableTransferWhenPublicHdIsMinus }" 
-						class="minimalist" >#{i18n.getText('KMF002_7')}</div>
+														enable: enableTransferWhenPublicHdIsMinus }">#{i18n.getText('KMF002_7')}</div>
 			</div>
 			
 			<div style="display: flex; padding-top: 30px">
@@ -218,7 +217,7 @@
 				<div style="padding-top: 25px">
 					<div>
 						<!-- A11_1 -->
-						<div class="minimalist" tabindex="" data-bind="ntsCheckBox: { 
+						<div tabindex="" data-bind="ntsCheckBox: { 
 																						checked: fourWkFourHDNumSet().isOneWeekHoliday, 
 																						enable: enable4Weeks4HDSet, 
 																						text: '#{i18n.getText('KMF002_17')}' 
@@ -301,7 +300,7 @@
 				<div>
 					<div>
 						<!-- A12_1 -->
-						<div class="minimalist" tabindex="" data-bind="ntsCheckBox: { 
+						<div tabindex="" data-bind="ntsCheckBox: { 
 																						checked: fourWkFourHDNumSet().isFourWeekHoliday, 
 																						enable: enable4Weeks4HDSet, 
 																						text: '#{i18n.getText('KMF002_18')}' 
