--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/kmf002.d.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/kmf002.d.main.css
@@ -4,11 +4,12 @@
 
 #scrD table th, #scrD table td{
 	border: 1px solid  black;
+	padding: 5px;
 }
 
 #scrD table td > span > input{
-	background-color:transparent;
-    border: 0px solid;
+	/* background-color:transparent;
+    border: 0px solid; */
     text-align: center;
 }
 
