--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/e/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/e/index.xhtml
@@ -10,9 +10,9 @@
 		
 		<div class="sidebar-content-header">
    			<!-- E1_1 -->
-   			<button tabindex="1" data-bind="click: save">#{i18n.getText('KMF002_2')}</button>
+   			<button tabindex="1" data-bind="click: save, enable: enableSave">#{i18n.getText('KMF002_2')}</button>
    			<!-- E1_2 -->
-   			<button tabindex="2" data-bind="click: deleteObj">#{i18n.getText('KMF002_11')}</button>
+   			<button tabindex="2" data-bind="click: deleteObj, enable: enableDelete">#{i18n.getText('KMF002_11')}</button>
 		</div>
 		
 		<div id="scrE" class="contents-area" data-bind="with: commonTableMonthDaySet">
