--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/e/kmf002.e.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/e/kmf002.e.main.css
@@ -1,50 +1,15 @@
-/* .pl {
-	padding-left: 50px;
-}
-.system_define{
-	width: 960px;
-	margin-top: 40px;
-}
-
-.system_define > p {
-	margin-left: 35px;
-	margin-bottom: 40px;
-}
-
-.system_define > #tab-panel {
-	margin-left: 40px;
-}
-
-.system_define > #tab-panel {
-	margin-left: 40px;
-}
-
-.system_define > #tab-panel .set_height {
-	height: 490px;
-}
-
-.system_define> #tab-panel .table_content {
-	float: left;
-	margin-left: 20px;
-    margin-top: 25px;
-    margin-right: 30px;
-}
-
-.system_define> #tab-panel .table_content td{
-	padding-bottom: 20px;
-} */
-
 #scrE table {
 	border-collapse: collapse;
 }
 
 #scrE table th, #scrE table td{
 	border: 1px solid  black;
+	padding: 5px;
 }
 
 #scrE table td > span > input{
-	background-color:transparent;
-    border: 0px solid;
+	/* background-color:transparent;
+    border: 0px solid; */
     text-align: center;
 }
 
