--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/index.xhtml
@@ -32,7 +32,7 @@
 			<div id="functions-area">
 				<div class="container">
 					<button tabindex="1" data-bind="click: openKAL003dDialog">#{i18n.getText('KAL003_5')}</button>
-					<button tabindex="2" data-bind="click: registerAlarmCheckCondition, enable: $root.errors.isEmpty" class="proceed">#{i18n.getText('KAL003_6')}</button>
+					<button tabindex="2" data-bind="click: registerAlarmCheckCondition, visible: $root.errors.isEmpty" class="proceed">#{i18n.getText('KAL003_6')}</button>
 					<button tabindex="2" data-bind="enable: screenMode() == 1">#{i18n.getText('KAL003_7')}</button>
 					<button tabindex="3" data-bind="click: deleteAlarmCheckCondition, enable: screenMode() == 1" class="danger">#{i18n.getText('KAL003_8')}</button>
 				</div>
