--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/a/ksu001.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/a/ksu001.a.main.css
@@ -284,7 +284,7 @@ table th, table td {
 .ex-editor input {
 	width: 100%;
 	height: 100%;
-	display: grid;
+	display: block !important;
 }
 
 .h-90 {
@@ -293,4 +293,13 @@ table th, table td {
 
 #input-heightExtable {
 	width: 65px
+}
+
+.icon-leftmost {
+	background-image: url(../image/7.png);
+	height: 20px;
+	width: 20px;
+	left: 1px !important;
+	top: 4px !important;
+	margin-top: 0px !important
 }
