--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/base.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/base.scss
@@ -2,6 +2,7 @@
 @import "compass-for-vs2013-master/compass/_reset.scss";
 @import "base/_base_def.scss";
 @import "base/_clearfix.scss";
+@import "base/_menu.scss";
 @import "components/_color.scss";
 @import "components/_commons.scss";
 @import "components/_icons.scss";
