--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -110,6 +110,306 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   *zoom: 1;
 }
 
+/* line 1, ../sass/base/_menu.scss */
+#header #menu-header {
+  background-color: #fff;
+  position: relative;
+  top: 0;
+  width: 100%;
+  white-space: nowrap;
+  z-index: 10000000;
+}
+
+/* line 10, ../sass/base/_menu.scss */
+#header #menu-header #logo-area {
+  height: 30px;
+}
+
+/* line 14, ../sass/base/_menu.scss */
+#header #menu-header #logo-area #logo {
+  width: 300px;
+  height: 30px;
+  cursor: pointer;
+}
+
+/* line 20, ../sass/base/_menu.scss */
+#header #menu-header #pg-area #pg-name {
+  width: 330px;
+  height: 25px;
+  padding: 5px 0px 0px 10px;
+  color: #000;
+}
+
+/* line 27, ../sass/base/_menu.scss */
+#header #menu-header #pg-area #manual {
+  position: absolute;
+  top: 60px;
+  right: 0px;
+}
+
+/* line 33, ../sass/base/_menu.scss */
+#header #menu-header #pg-area #manual .manual-button {
+  width: 23px;
+  height: 26px;
+}
+
+/* line 38, ../sass/base/_menu.scss */
+#header #menu-header #pg-area #manual .tgl {
+  display: inline-block;
+  height: 24px;
+  width: 32px;
+  margin: 3px 3px 0px 3px;
+  padding-top: 3px;
+  text-align: center;
+  cursor: pointer;
+}
+
+/* line 48, ../sass/base/_menu.scss */
+#header #menu-header #pg-area #manual .tgl:hover {
+  background-color: #F3F2F6;
+}
+
+/* line 52, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
+/* line 58, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info > #company {
+  display: inline-block;
+  border-left: solid 3px #1AC911;
+  line-height: 22px;
+  margin: 2px;
+  padding: 2px 20px 2px 8px;
+}
+
+/* line 66, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info > #user {
+  display: inline-block;
+  line-height: 22px;
+  margin: 2px;
+  padding: 2px 12px 2px 8px;
+}
+
+/* line 73, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info > #user > #user-image {
+  cursor: pointer;
+}
+
+/* line 77, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info > #company > #company-name,
+#header #menu-header #logo-area > #user-info > #user > #user-name {
+  color: #000;
+}
+
+/* line 82, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info > #company > .company-select,
+#header #menu-header #logo-area > #user-info > #user > .user-settings {
+  margin-left: 6px;
+  cursor: pointer;
+  float: right;
+}
+
+/* line 89, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info > #company > .company-select:hover,
+#header #menu-header #logo-area > #user-info > #user > .user-settings:hover {
+  background-color: #F3F2F6;
+}
+
+/* line 94, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info > #company > .company-select > ul.company-list,
+#header #menu-header #logo-area > #user-info > #user > .user-settings > ul.user-options {
+  display: none;
+  position: absolute;
+  top: 30px;
+  z-index: 20000;
+  margin-left: 0;
+  list-style: none;
+  padding: 0;
+  background: #FFF;
+  color: #000;
+  border: solid 1px #ABA6A9;
+}
+
+/* line 108, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info > #user > .user-settings > ul.user-options {
+  right: 12px;
+}
+
+/* line 112, ../sass/base/_menu.scss */
+#header #menu-header #nav-area {
+  background: #666;
+  border-bottom: solid 3px #1AC911;
+  white-space: nowrap;
+}
+
+/* line 118, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav {
+  list-style-type: none;
+  height: 28px;
+  margin-right: 50px;
+  white-space: nowrap;
+  display: inline-block;
+  float: left;
+  position: relative;
+}
+
+/* line 128, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav li {
+  position: relative;
+}
+
+/* line 132, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  border-right: solid 2px #1AC911;
+}
+
+/* line 140, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category:first-child {
+  border-left: solid 2px #1AC911;
+  width: 48px;
+}
+
+/* line 145, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category > div.category-name {
+  padding: 5px 20px;
+  background: #666;
+  color: #FFF;
+  cursor: pointer;
+  font-family: "DroidSansMono", "Meiryo";
+  line-height: 18px;
+}
+
+/* line 154, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category:not(.menu-select) > div.category-name:hover {
+  background: #90F203 !important;
+}
+
+/* line 158, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category:not(.menu-select) > div.category-name.opening {
+  background: #FFF !important;
+  color: #000 !important;
+}
+
+/* line 163, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav li.menu-select > div.category-name {
+  text-align: center;
+}
+
+/* line 167, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav li.menu-select ul.menu-items > li.menu-item {
+  width: 200px;
+  cursor: pointer;
+  padding: 5px 5px 5px 23px;
+  white-space: nowrap;
+}
+
+/* line 174, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav li.menu-select ul.menu-items > li.menu-item:first-child {
+  font-size: medium;
+  font-weight: bold;
+  cursor: default;
+  padding: 8px;
+}
+
+/* line 181, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav li.menu-select ul.menu-items > li.menu-item:not(:first-child):hover {
+  background: #F7F7D1;
+  color: #000;
+}
+
+/* line 186, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category > ul.menu-items {
+  display: none;
+  position: absolute;
+  top: 31px;
+  z-index: 20000;
+  margin-left: 0;
+  list-style: none;
+  padding: 0;
+  background: #FFF;
+  color: #000;
+  border: solid 1px #ABA6A9;
+}
+
+/* Title menu */
+/* line 200, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category > ul.menu-items > div.title-menu > div.title-div {
+  width: 192px;
+  position: absolute;
+  margin: 0px 8px 4px 2px;
+  top: 5px;
+}
+
+/* line 207, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category > ul.menu-items > div.title-menu > div.title-div > div.title-name {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* line 216, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category > ul.menu-items > div.title-menu > div.title-div > img.title-image {
+  height: 80px;
+  width: 100%;
+  margin: 6px 0px 8px 0px;
+  border-radius: 16px;
+}
+
+/* line 223, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category > ul.menu-items > div.title-menu > div.title-div > li.title-item {
+  cursor: pointer;
+  padding: 8px;
+  white-space: pre-wrap;
+}
+
+/* line 229, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category > ul.menu-items > div.title-menu > div.title-div > li.title-item:hover {
+  background: #F7F7D1;
+}
+
+/* line 233, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category:not(.menu-select) > ul.menu-items > li.menu-item,
+#header #menu-header #logo-area > #user-info > #company > .company-select > ul.company-list > li.company-item {
+  width: 230px;
+  cursor: pointer;
+  padding: 5px;
+  white-space: nowrap;
+}
+
+/* line 241, ../sass/base/_menu.scss */
+#header #menu-header #logo-area > #user-info > #user > .user-settings > ul.user-options > li {
+  width: 180px;
+  cursor: pointer;
+  padding: 5px;
+  white-space: nowrap;
+}
+
+/* line 248, ../sass/base/_menu.scss */
+#header #menu-header #nav-area #menu-nav > li.category:not(.menu-select) > ul.menu-items > li.menu-item:hover,
+#header #menu-header #logo-area > #user-info > #company > .company-select > ul.company-list > li.company-item:hover,
+#header #menu-header #logo-area > #user-info > #user > .user-settings > ul.user-options > li:hover {
+  background: #F7F7D1;
+  color: #000;
+}
+
+/* line 255, ../sass/base/_menu.scss */
+#header #menu-header #pg-area {
+  height: 30px;
+  border-bottom: 1px solid #ABA6A9;
+  border-right: 1px solid #ABA6A9;
+  border-left: 2px solid #1AC911;
+}
+
 /* line 1, ../sass/components/_color.scss */
 .color-proceed {
   color: #00B050;
@@ -4618,12 +4918,12 @@ div .ex-area-line.x-stay {
   border: 1px solid DodgerBlue;
 }
 
-/* line 50, ../sass/base.scss */
+/* line 51, ../sass/base.scss */
 html {
   font-size: 14px;
 }
 
-/* line 54, ../sass/base.scss */
+/* line 55, ../sass/base.scss */
 body * {
   font-size: 1rem;
   font-family: "Meiryo UI";
